# fantatt

./: .gitattributes  .gitignore  .yarnrc  README.md  build.gradle.kts  buildscript-gradle.lockfile  flake.nix  gradle.lockfile  package-lock.json  package.json  pyproject.toml  settings.gradle.kts
.config/: modules.js  paths.js  webpack.config.js
assets/: db.sql  db.sqlite3
backend/: HELP.md  build.gradle.kts
backend/main/kotlin/com/fantatt/fantattbackend/: FantattBackendApplication.kt
backend/main/kotlin/com/fantatt/fantattbackend/db/entities/: League.kt  LeagueEntity.kt  Match.kt  MatchEntity.kt  Partecipation.kt  Participation.kt  ParticipationEntity.kt  (+14 more)
backend/main/kotlin/com/fantatt/fantattbackend/game/: CalendarManager.kt  GameFormat.kt  LeagueCreator.kt  LineupManager.kt  PlayerScoreComputer.kt  RoundManager.kt  SeasonManager.kt  SimpleScoreComputer.kt  SimulatedMatch.kt
backend/main/kotlin/com/fantatt/fantattbackend/lifecycle/: FitetDbUpdateRunner.kt  SchedulingConfig.kt
backend/main/kotlin/com/fantatt/fantattbackend/security/: TTUserDetailsService.kt  WebSecurityConfig.kt
backend/main/kotlin/com/fantatt/fantattbackend/web/: AppController.kt  DataFetchController.kt  GameController.kt  LeaguesController.kt  ResultsController.kt
backend/main/resources/: application.properties
backend/test/kotlin/com/fantatt/fantattbackend/: FantattBackendApplicationTests.kt
docs/: backend.md  er.drawio  general.md
fitet/: entities.py  fitetparser.py  threadutils.py
frontend/: package.json
nix/: fantatt-backend.nix  fantatt-frontend.nix  fitet-parser.nix
(+20 files in other folders)
