[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fantatt"
version = "0.1.0"
description = "Fantasy tabletennis"
requires-python = ">=3.8"
keywords = ["python"]
authors = [
    {name = "Samuele Facenda", email = "samuele.facenda@gmail.com"},
]
dependencies = [
   "requests",
   "beautifulsoup4",
   "icecream",
   "sqlalchemy",
]

[project.scripts]
fitet-runner = "fitet.__main__:main"

[tool.setuptools]
packages = ["fitet"]
